welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: value oklm
var ordre : String =oklm
                    ^BDRBuggle:8: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "Z"){
                          ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "R"){
                          ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "L"){
                          ^BDRBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "I"){
                          ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
   		if (ordre = "A"){
                          ^BDRBuggle:27: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "B"){
                          ^BDRBuggle:31: error: type mismatch;
 found   : Unit
 required: Boolean
  		if (ordre = "C"){
                          ^BDRBuggle:36: error: type mismatch;
 found   : Unit
 required: Boolean
      if (ordre = "Y"){
                ^